--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -390,3 +390,65 @@ h2, h3, h4, h6 {
 .list-group-item-action:hover {
     background-color: #e9ecef;
 }
+
+.table-dark {
+    border-collapse: separate;
+    border-spacing: 0;
+}
+
+.table-dark thead th,
+.table-dark td,
+.table-dark th {
+    border: none !important;
+}
+
+.selection-role{
+    height: 40px;
+    border-radius: 4px
+}
+.selection-text {
+    color: #dee2e6;
+}
+
+.my-evet-card {
+    background: #242a30;
+}
+#searchBar {
+    max-width: 450px;
+    margin-bottom: 1.5rem !important;
+}
+
+.participant-link {
+    color: #dee2e6; 
+    text-decoration: none;
+}
+.participant-link:hover {
+    color: #f8f9fa; 
+    text-decoration: underline;
+}
+
+.alert-info {
+    background-color: #117a8b;
+    color: #fff;
+    border-color: #0f6674;
+}
+
+textarea.form-control {
+    background-color: #495057;
+    color: #f8f9fa;
+    border-color: #6c757d;
+}    
+
+
+textarea.form-control:focus {
+    background-color: #495057;
+    color: #f8f9fa;
+    border-color: #adb5bd;
+    box-shadow: 0 0 0 0.25rem rgba(173, 181, 189, 0.25); 
+}
+
+.my-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
